--- a/Code/model_build/model_build.ipynb
+++ b/Code/model_build/model_build.ipynb
@@ -6,17 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-03T12:51:15.921122Z",
-     "start_time": "2024-12-03T12:51:15.432370Z"
+     "end_time": "2024-12-04T02:24:52.693319Z",
+     "start_time": "2024-12-04T02:24:52.199199Z"
     }
    },
    "source": [
     "import pickle\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.animation as animation"
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -27,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T12:23:35.297224Z",
-     "start_time": "2024-12-03T12:23:19.643653Z"
+     "end_time": "2024-12-04T02:25:07.172087Z",
+     "start_time": "2024-12-04T02:24:52.694341Z"
     }
    },
    "cell_type": "code",
@@ -40,7 +39,7 @@
    ],
    "id": "dfca8e49e120b4c9",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -51,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T13:47:50.154674Z",
-     "start_time": "2024-12-03T13:47:50.148317Z"
+     "end_time": "2024-12-04T02:25:07.181356Z",
+     "start_time": "2024-12-04T02:25:07.173362Z"
     }
    },
    "cell_type": "code",
@@ -208,31 +207,24 @@
        "  'ZW': 37}}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 58
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T13:48:03.330454Z",
-     "start_time": "2024-12-03T13:48:03.295353Z"
+     "end_time": "2024-12-04T02:25:07.221390Z",
+     "start_time": "2024-12-04T02:25:07.181874Z"
     }
    },
    "cell_type": "code",
    "source": "package_data[first_route]",
    "id": "7b760762fa9d80aa",
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6112\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1238,31 +1230,24 @@
        "   'dimensions': {'depth_cm': 30.5, 'height_cm': 2.5, 'width_cm': 27.9}}}}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 59
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T13:48:22.178286Z",
-     "start_time": "2024-12-03T13:48:22.164159Z"
+     "end_time": "2024-12-04T02:25:07.235803Z",
+     "start_time": "2024-12-04T02:25:07.222398Z"
     }
    },
    "cell_type": "code",
    "source": "route_data[first_route]",
    "id": "f56ea7725937803e",
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6112\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1837,18 +1822,18 @@
        "   'zone_id': 'B-31.2E'}}}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 60
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T13:02:14.208848Z",
-     "start_time": "2024-12-03T13:02:14.018437Z"
+     "end_time": "2024-12-04T02:25:07.431958Z",
+     "start_time": "2024-12-04T02:25:07.236807Z"
     }
    },
    "cell_type": "code",
@@ -21741,12 +21726,42 @@
        "  'ZW': 0.0}}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 48
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 最多站点数量",
+   "id": "1611f2e904a5d928"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T02:25:41.820148Z",
+     "start_time": "2024-12-04T02:25:41.813147Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "max(len(route[\"stops\"]) for route in route_data.values())",
+   "id": "ce4d42eac75ea9a8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "238"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
