--- a/Code/model_build/model_build.ipynb
+++ b/Code/model_build/model_build.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-04T02:24:52.693319Z",
-     "start_time": "2024-12-04T02:24:52.199199Z"
+     "end_time": "2024-12-04T03:38:38.017362Z",
+     "start_time": "2024-12-04T03:38:38.013411Z"
     }
    },
    "source": [
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -26,20 +26,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T02:25:07.172087Z",
-     "start_time": "2024-12-04T02:24:52.694341Z"
+     "end_time": "2024-12-04T03:39:25.985833Z",
+     "start_time": "2024-12-04T03:39:05.797377Z"
     }
    },
    "cell_type": "code",
    "source": [
     "actual_sequences = pickle.load(open(f\"./pkl/actual_sequences.pkl\", \"rb\"))\n",
+    "invalid_sequence_scores = pickle.load(open(f\"./pkl/invalid_sequence_scores.pkl\", \"rb\"))\n",
     "package_data = pickle.load(open(f\"./pkl/package_data.pkl\", \"rb\"))\n",
     "route_data = pickle.load(open(f\"./pkl/route_data.pkl\", \"rb\"))\n",
     "travel_times = pickle.load(open(f\"./pkl/travel_times.pkl\", \"rb\"))"
    ],
    "id": "dfca8e49e120b4c9",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -50,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T02:25:07.181356Z",
-     "start_time": "2024-12-04T02:25:07.173362Z"
+     "end_time": "2024-12-04T03:39:36.978208Z",
+     "start_time": "2024-12-04T03:39:36.969208Z"
     }
    },
    "cell_type": "code",
@@ -207,12 +208,36 @@
        "  'ZW': 37}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T03:39:38.288648Z",
+     "start_time": "2024-12-04T03:39:38.283212Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "invalid_sequence_scores[first_route]",
+   "id": "23bd9ee6eaa4baf8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3966955192571264"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -21742,8 +21767,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T02:25:41.820148Z",
-     "start_time": "2024-12-04T02:25:41.813147Z"
+     "end_time": "2024-12-04T02:38:29.064709Z",
+     "start_time": "2024-12-04T02:38:29.057696Z"
     }
    },
    "cell_type": "code",
@@ -21756,12 +21781,12 @@
        "238"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "metadata": {},
