Add a template for builder and solver

--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "from model_build.builder import *\n",
     "from model_apply.solver import *\n",
-    "from model_score import model_score"
+    "from model_score import model_score\n",
+    "import pickle"
    ],
    "outputs": [],
    "execution_count": 2
