--- a/Code/model_build/model_build.ipynb
+++ b/Code/model_build/model_build.ipynb
@@ -33,7 +33,6 @@
    "cell_type": "code",
    "source": [
     "actual_sequences = pickle.load(open(f\"./pkl/actual_sequences.pkl\", \"rb\"))\n",
-    "invalid_sequence_scores = pickle.load(open(f\"./pkl/invalid_sequence_scores.pkl\", \"rb\"))\n",
     "package_data = pickle.load(open(f\"./pkl/package_data.pkl\", \"rb\"))\n",
     "route_data = pickle.load(open(f\"./pkl/route_data.pkl\", \"rb\"))\n",
     "travel_times = pickle.load(open(f\"./pkl/travel_times.pkl\", \"rb\"))"
@@ -57,8 +56,8 @@
    },
    "cell_type": "code",
    "source": [
-    "first_route = list(actual_sequences.keys())[22]\n",
-    "actual_sequences[first_route]"
+    "route = list(actual_sequences.keys())[22]\n",
+    "actual_sequences[route]"
    ],
    "id": "24f6a77764bfe1c3",
    "outputs": [
@@ -218,36 +217,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T03:39:38.288648Z",
-     "start_time": "2024-12-04T03:39:38.283212Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "invalid_sequence_scores[first_route]",
-   "id": "23bd9ee6eaa4baf8",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.3966955192571264"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-12-04T02:25:07.221390Z",
      "start_time": "2024-12-04T02:25:07.181874Z"
     }
    },
    "cell_type": "code",
-   "source": "package_data[first_route]",
+   "source": "package_data[route]",
    "id": "7b760762fa9d80aa",
    "outputs": [
     {
@@ -1270,7 +1245,7 @@
     }
    },
    "cell_type": "code",
-   "source": "route_data[first_route]",
+   "source": "route_data[route]",
    "id": "f56ea7725937803e",
    "outputs": [
     {
@@ -1862,7 +1837,7 @@
     }
    },
    "cell_type": "code",
-   "source": "travel_times[first_route]",
+   "source": "travel_times[route]",
    "id": "d76987e7568a5258",
    "outputs": [
     {
